# Email-Generation-Assistant

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
scripts/: run.py
src/email_eval/: config.py  schemas.py
src/email_eval/client/: groq_client.py
src/email_eval/data/: scenarios.json
src/email_eval/evaluation/: evaluator.py  metric_conciseness.py  metric_fact_inclusion.py  metric_tone_fidelity.py
src/email_eval/generation/: generator.py
src/email_eval/orchestration/: run_eval.py
src/email_eval/prompts/: few_shot_examples.py  strategy_a_cot_fewshot.py
tests/: test_evaluator.py  test_generator_parsing.py  test_metric_conciseness.py  test_metric_fact_inclusion.py  test_metric_tone_fidelity.py
